[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/img/menu/LEFT.png" type="Texture" id=1]
[ext_resource path="res://assets/img/menu/RIGHT.png" type="Texture" id=2]
[ext_resource path="res://assets/img/world/bg.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/smashcat.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/img/menu/A2.png" type="Texture" id=5]
[ext_resource path="res://src/menu/ModeSelect.gd" type="Script" id=6]

[node name="Node2D" type="Node2D"]
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 121, 88 )
texture = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -54.0
margin_top = -12.0
margin_right = -5.0
margin_bottom = -1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/HBoxContainer2"]
margin_top = 2.0
margin_right = 34.0
margin_bottom = 8.0
custom_fonts/font = ExtResource( 4 )
text = "start"
uppercase = true

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/HBoxContainer2"]
margin_left = 38.0
margin_right = 49.0
margin_bottom = 11.0
texture = ExtResource( 5 )

[node name="Lines" type="CanvasLayer" parent="CanvasLayer"]

[node name="NbPlayers" type="VBoxContainer" parent="CanvasLayer/Lines"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -35.0
margin_top = -47.5
margin_right = 26.0
margin_bottom = 0.5
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Lines/NbPlayers"]
margin_top = 13.0
margin_right = 61.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Nb players"
align = 1
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Lines/NbPlayers"]
margin_top = 23.0
margin_right = 61.0
margin_bottom = 35.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Lines/NbPlayers/HBoxContainer"]
margin_left = 12.0
margin_right = 24.0
margin_bottom = 12.0
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="CanvasLayer/Lines/NbPlayers/HBoxContainer"]
margin_left = 28.0
margin_top = 3.0
margin_right = 33.0
margin_bottom = 9.0
custom_fonts/font = ExtResource( 4 )
text = "1"
uppercase = true

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/Lines/NbPlayers/HBoxContainer"]
margin_left = 37.0
margin_right = 48.0
margin_bottom = 12.0
texture = ExtResource( 2 )

[node name="GameMode" type="VBoxContainer" parent="CanvasLayer/Lines"]
margin_left = 80.0
margin_top = 60.0
margin_right = 131.0
margin_bottom = 82.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Lines/GameMode"]
margin_right = 51.0
margin_bottom = 6.0
custom_fonts/font = ExtResource( 4 )
text = "GAMEMODE"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Lines/GameMode"]
margin_top = 10.0
margin_right = 51.0
margin_bottom = 22.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Lines/GameMode/HBoxContainer"]
margin_left = 7.0
margin_right = 19.0
margin_bottom = 12.0
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="CanvasLayer/Lines/GameMode/HBoxContainer"]
margin_left = 23.0
margin_top = 3.0
margin_right = 28.0
margin_bottom = 9.0
custom_fonts/font = ExtResource( 4 )
text = "1"
uppercase = true

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/Lines/GameMode/HBoxContainer"]
margin_left = 32.0
margin_right = 43.0
margin_bottom = 12.0
texture = ExtResource( 2 )

[node name="NbLifes" type="VBoxContainer" parent="CanvasLayer/Lines"]
margin_left = 90.0
margin_top = 90.0
margin_right = 126.0
margin_bottom = 112.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Lines/NbLifes"]
margin_right = 36.0
margin_bottom = 6.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Lifes"
align = 1
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Lines/NbLifes"]
margin_top = 10.0
margin_right = 36.0
margin_bottom = 22.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Lines/NbLifes/HBoxContainer"]
margin_right = 12.0
margin_bottom = 12.0
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="CanvasLayer/Lines/NbLifes/HBoxContainer"]
margin_left = 16.0
margin_top = 3.0
margin_right = 21.0
margin_bottom = 9.0
custom_fonts/font = ExtResource( 4 )
text = "1"
uppercase = true

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/Lines/NbLifes/HBoxContainer"]
margin_left = 25.0
margin_right = 36.0
margin_bottom = 12.0
texture = ExtResource( 2 )
